output/context/jacksonDatabind_tests/com/fasterxml/jackson/failing/TestInnerClass.java
public void testInnerList() throws Exception
